--- a/semicolonLab/index.en.html
+++ b/semicolonLab/index.en.html
@@ -50,7 +50,7 @@
             <p>Requirement</p><textarea>
             </textarea>
         </form>
-        <p>Tel : (+81)-80-2669-6777</p>
+        <p>Tel :xxxxxxx  </p>
     </div>
 </body>
 </html>
