--- a/semicolonLab/index.js.html
+++ b/semicolonLab/index.js.html
@@ -36,8 +36,8 @@
     <p>システム設計</p>
 
 <h2>連絡先</h2>
-    <p>電話番号 : 080-2669-6777</p>
-    <p>Eメール : yumikaaaaaaaaa@gmail.com</p>
+    <p>電話番号 : xxxxxxxxx</p>
+    <p>Eメール : xxxxxxxxxx</p>
 
 </body>
 </html>
