--- a/semicolonLab/idex.html
+++ b/semicolonLab/idex.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>初心者向けホームページテンプレート tp_beginner6</title>
+<title>Semicolon Lab.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
-<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+<meta name="description" content="ITコンサルタントのセミコロン ラボです。インターネットに関連するお悩み、一度ご相談ください!">
+<meta name="keywords" content="フリーランス,ITコンサルタント,Project Management,UIUX,デザイン">
 <link rel="stylesheet" href="css/style.css">
 <script src="js/fixmenu_pagetop.js"></script>
 <!--[if lt IE 9]>
@@ -18,12 +18,12 @@
 <body>
 
 <header>
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
+<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="セミコロン ラボ"></a></h1>
 <nav id="menubar">
 <ul>
 <li><a href="#new">What's New</a></li>
-<li><a href="#company">Company</a></li>
-<li><a href="#service">Service</a></li>
+<li><a href="#information">Information</a></li>
+<li><a href="#skills">Skills</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
@@ -39,10 +39,10 @@
 <dl>
 <dt>2021/12/15</dt>
 <dd>fixmenu_pagetop.jsからscroll.jsに変更。既に利用中のお客様は特に設定の変更は不要です、引き続きご利用下さい。<span class="newicon">NEW</span></dd>
-<dt>2020/09/27</dt>
-<dd>初心者向け無料ホームページテンプレートtp_beginner6公開。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
+<dt>2023/08/04</dt>
+<dd>フリーランスITコンサルタントとしてセミコロンラボを開業</dd>
+<dt>2023/06/08</dt>
+<dd>PayCのPR記事サムネイルを作成させていただきました。</dd>
 <dt>20XX/00/00</dt>
 <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
 <dt>20XX/00/00</dt>
@@ -58,35 +58,27 @@
 </section>
 <!--/#new-->
 
-<section id="company">
+<section id="information">
 
-<h2>Company</h2>
+<h2>Information</h2>
 
-<h3>会社概要</h3>
+<h3>略歴</h3>
 <table class="ta1">
 <caption>見出しが必要であればここを使います</caption>
 <tr>
-<th>見出し</th>
+<th>Northcote College(New Zealand)卒業</th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th>見出し</th>
+<th>中央大学文学部社会学専攻 卒業</th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th>見出し</th>
+<th>株式会社Frill</th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th>見出し</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-</tr>
-<tr>
-<th>見出し</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-</tr>
-<tr>
-<th>見出し</th>
+<th>楽天株式会社</th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 </table>
@@ -191,11 +183,11 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 <p><a href="https://template-party.com/bbs/">サポート掲示板</a>からご質問下さい。対応可能な範囲内でサポートしております。</p>
 
 </section>
-<!--/#company-->
+<!--/#information-->
 
-<section id="service">
+<section id="skills">
 
-<h2>Service</h2>
+<h2>Skills</h2>
 
 <div class="list">
 <img src="images/sample1.jpg" alt="">
@@ -228,7 +220,7 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 </div>
 
 </section>
-<!--/#service-->
+<!--/#skills-->
 
 <section id="contact">
 
@@ -249,7 +241,7 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 <!--/#container-->
 
 <footer>
-<small>Copyright&copy; <a href="index.html">SAMPLE COMPANY</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">セミコロン ラボ</a> All Rights Reserved.</small>
 <span class="pr">《<a href="https://template-party.com/" target="_blank">Web Design:Template-Party</a>》</span>
 </footer>
 
