--- a/semicolonLab/idex.html
+++ b/semicolonLab/idex.html
@@ -40,6 +40,7 @@
 <dl>
 <!--<dt>2021/12/15</dt>
 <dd>fixmenu_pagetop.jsからscroll.jsに変更。既に利用中のお客様は特に設定の変更は不要です、引き続きご利用下さい。<span class="newicon">NEW</span></dd><dt>2023/08/04</dt>-->
+<dt>2023/08/04</dt>
 <dd>フリーランスITコンサルタントとしてセミコロンラボを開業<span class="newicon">NEW</span></dd>
 <dt>2023/06/08</dt>
 <dd>PayCのPR記事サムネイルを作成させていただきました。</dd>
@@ -51,8 +52,6 @@
 <section id="about">
 
 <h2>About</h2>
-
-<h3>About</h3>
 </p>
     東京をベースにフリーランスのITコンサルタントをしております。<br>
     2016年よりC2Cアプリのカスタマーサポートに関わる業務を始める。<br>
@@ -64,6 +63,9 @@
 <th>名称</th>
 <td>セミコロン ラボ</td>
 </tr>
+<tr>
+<th>所在地</th>
+<td>静岡県・東京都</tr>
 <tr>
 <th>事業内容</th>
 <td>インターネット関連プロジェクトのディレクション、プロジェクトマネジメント、海外ベンダーとの折衝、カスタマーサポートの導入、サムネイル作成、LINE＠導入等</td>
@@ -177,24 +179,23 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 
 <h2>Works</h2>
 
-<div class="list">
+<!--<div class="list">
 <img src="images/sample1.jpg" alt="">
 <h4>ここの見出しのサイズは、cssフォルダのstyle.cssの「.list h4」で変更できます。</h4>
 <p>左の画像の幅もstyle.cssの「.list img」のwidthの数字で変更できます。</p>
-</div>
+</div>-->
 
 <div class="list">
-<img src="images/sample2.jpg" alt="">
-<h4>見出しを入れます。</h4>
-<p>説明を入れます。</p>
+<img src="images/TechUs.png" alt="">
+<h4>TechUs様のPR記事で使用するサムネイルを作成させていただきました。</h4>
 </div>
 
 <div class="list">
 <img src="images/sample3.jpg" alt="">
-<h4>見出しを入れます。</h4>
-<p>説明を入れます。</p>
+<h4>PayCのLINE＠リッチメニュー部分を作成させていただきました。</h4>
 </div>
 
+<!--
 <div class="list">
 <img src="images/sample4.jpg" alt="">
 <h4>見出しを入れます。</h4>
@@ -206,6 +207,7 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 <h4>見出しを入れます。</h4>
 <p>説明を入れます。</p>
 </div>
+-->
 
 </section>
 <!--/#works-->
