--- a/semicolonLab/idex.html
+++ b/semicolonLab/idex.html
@@ -21,7 +21,6 @@
 <h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="セミコロン ラボ"></a></h1>
 <nav id="menubar">
 <ul>
-<li><a href="#new">What's New</a></li>
 <li><a href="#about">About</a></li>
 <li><a href="#works">Works</a></li>
 <li><a href="#blog">Blog</a></li>
@@ -34,24 +33,10 @@
 
 <div id="contents">
 
-<section id="new">
-
-<h2>What's New</h2>
-<dl>
-<!--<dt>2021/12/15</dt>
-<dd>fixmenu_pagetop.jsからscroll.jsに変更。既に利用中のお客様は特に設定の変更は不要です、引き続きご利用下さい。<span class="newicon">NEW</span></dd><dt>2023/08/04</dt>-->
-<dt>2023/08/04</dt>
-<dd>フリーランスITコンサルタントとしてセミコロンラボを開業<span class="newicon">NEW</span></dd>
-<dt>2023/06/08</dt>
-<dd>PayCのPR記事サムネイルを作成させていただきました。</dd>
-</dl>
-
-</section>
-<!--/#new-->
-
 <section id="about">
 
 <h2>About</h2>
+<img src="images/profile.jpg" alt="profile.jpg">
 </p>
     東京をベースにフリーランスのITコンサルタントをしております。<br>
     2016年よりC2Cアプリのカスタマーサポートに関わる業務を始める。<br>
@@ -59,17 +44,23 @@
     2023年よりフリーランスへ転向。
 </p>
 <table class="ta1">
-<tr>
-<th>名称</th>
-<td>セミコロン ラボ</td>
-</tr>
-<tr>
-<th>所在地</th>
-<td>静岡県・東京都</tr>
-<tr>
-<th>事業内容</th>
-<td>インターネット関連プロジェクトのディレクション、プロジェクトマネジメント、海外ベンダーとの折衝、カスタマーサポートの導入、サムネイル作成、LINE＠導入等</td>
-</tr>
+    <tr>
+        <th>氏名
+        </th>
+        <td>下谷優美加　Shimotani　Yumika</td>
+    </tr>
+    <tr>
+        <th>名称</th>
+        <td>セミコロン ラボ</td>
+    </tr>
+    <tr>
+        <th>所在地</th>
+        <td>静岡県・東京都
+    </tr>
+    <tr>
+        <th>事業内容</th>
+        <td>インターネット関連プロジェクトのディレクション、プロジェクトマネジメント、海外ベンダーとの折衝、カスタマーサポートの導入、サムネイル作成、LINE＠導入等</td>
+    </tr>
 </table>
 </section>
 <!--/#about-->
@@ -186,13 +177,18 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 </div>-->
 
 <div class="list">
-<img src="images/TechUs.png" alt="">
-<h4>TechUs様のPR記事で使用するサムネイルを作成させていただきました。</h4>
+<img src="images/0yencampaign.png" alt="">
+<h4>PayCのLINE＠キャンペーン告知画像を作成させていただきました。</h4>
 </div>
 
 <div class="list">
-<img src="images/sample3.jpg" alt="">
+<img src="images/payc-richmenu.jpg" alt="">
 <h4>PayCのLINE＠リッチメニュー部分を作成させていただきました。</h4>
+</div>
+
+<div class="list">
+<img src="images/TechUs.png" alt="">
+<h4>TechUs様のPR記事で使用するサムネイルを作成させていただきました。</h4>
 </div>
 
 <!--
