--- a/semicolonLab/idex.html
+++ b/semicolonLab/idex.html
@@ -59,7 +59,14 @@
     </tr>
     <tr>
         <th>事業内容</th>
-        <td>インターネット関連プロジェクトのディレクション、プロジェクトマネジメント、海外ベンダーとの折衝、カスタマーサポートの導入、サムネイル作成、LINE＠導入等</td>
+        <ul class="disc">
+            <li>インターネット関連プロジェクトのディレクション</li>
+            <li>プロジェクトマネジメント</li>
+            <li>海外ベンダーとの折衝</li>
+            <li>カスタマーサポートの導入</li>
+            <li>サムネイル作成</li>
+            <li>LINE＠導入</li>
+            <p>等々</p>
     </tr>
 </table>
 </section>
@@ -222,7 +229,10 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 <div class="list">
 <img src="images/sample2.jpg" alt="">
 <h4>開業しました!</h4>
-<p><a href="https://note.com/__yumikaxaxa__/n/ncf6120afc3ac">note</a>へ遷移します。</p>
+<p>お久しぶりです。熱暑が続いていますが、皆さまいかがお過ごしでしょうか。<br>
+実はこの度、令和5年8月4日に開業いたしました。<br>
+事業内容としては、これまでの経験を活かし、インターネット関連プロジェクトのディレクション、プロジェクトマネジメント、海外ベンダーとの折衝、カスタマーサポートの導入、サムネイル作成、LINE＠導入等を行ってまいります。</p>
+<p><a href="https://note.com/__yumikaxaxa__/n/ncf6120afc3ac">note</a>で続きを読む</p>
 </div>
 <!--
 <div class="list">
@@ -252,12 +262,25 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 <h2>Contact</h2>
 <p class="c">大手からベンチャー企業、スタートアップ企業様まで、幅広い業務実績がございます。<br>
     お仕事の依頼、ご相談などお気軽に下記までお問い合わせください。</p>
-<p class="c">
-    メールアドレス：xxx<br>
-    電話番号：xxx<br>
-    LINE：xxx
-    </p>
-<p class="c"><img src="images/sample1.jpg" alt="" width="300"></p>
+<table class="ta1">
+    <tr>
+        <th>氏名
+        </th>
+        <td>下谷優美加　Shimotani　Yumika</td>
+    </tr>
+    <tr>
+        <th>メール</th>
+        <td>XXXXXXX</td>
+    </tr>
+    <tr>
+        <th>電話番号</th>
+        <td>XXXXXXX
+    </tr>
+    <tr>
+        <th>LINE</th>
+        <td>XXXXXXX
+    </tr>
+</table>
 
 </section>
 <!--/#contact-->
