--- a/semicolonLab/idex.html
+++ b/semicolonLab/idex.html
@@ -59,7 +59,7 @@
     </tr>
     <tr>
         <th>事業内容</th>
-        <ul class="disc">
+        <td>
             <li>インターネット関連プロジェクトのディレクション</li>
             <li>プロジェクトマネジメント</li>
             <li>海外ベンダーとの折衝</li>
@@ -67,6 +67,7 @@
             <li>サムネイル作成</li>
             <li>LINE＠導入</li>
             <p>等々</p>
+        </td>
     </tr>
 </table>
 </section>
@@ -227,12 +228,12 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 -->
 
 <div class="list">
-<img src="images/sample2.jpg" alt="">
+<img src="images/kaigyo.jpg" alt="">
 <h4>開業しました!</h4>
 <p>お久しぶりです。熱暑が続いていますが、皆さまいかがお過ごしでしょうか。<br>
 実はこの度、令和5年8月4日に開業いたしました。<br>
 事業内容としては、これまでの経験を活かし、インターネット関連プロジェクトのディレクション、プロジェクトマネジメント、海外ベンダーとの折衝、カスタマーサポートの導入、サムネイル作成、LINE＠導入等を行ってまいります。</p>
-<p><a href="https://note.com/__yumikaxaxa__/n/ncf6120afc3ac">note</a>で続きを読む</p>
+<p><a href="https://note.com/__yumikaxaxa__/n/ncf6120afc3ac">続きを読む</a></p>
 </div>
 <!--
 <div class="list">
