--- a/semicolonLab/idex.html
+++ b/semicolonLab/idex.html
@@ -36,7 +36,7 @@
 <section id="about">
 
 <h2>About</h2>
-<img src="images/profile.jpg" alt="profile.jpg">
+<img id="aboutimg" src="images/profile.jpg" alt="profile.jpg">
 </p>
     東京をベースにフリーランスのITコンサルタントをしております。<br>
     2016年よりC2Cアプリのカスタマーサポートに関わる業務を始める。<br>
@@ -184,17 +184,17 @@ cssの解説は、「<span class="color1">/*</span>」と「<span class="color1"
 <p>左の画像の幅もstyle.cssの「.list img」のwidthの数字で変更できます。</p>
 </div>-->
 
-<div class="list">
+<div class="list2">
 <img src="images/0yencampaign.png" alt="">
 <h4>PayCのLINE＠キャンペーン告知画像を作成させていただきました。</h4>
 </div>
 
-<div class="list">
+<div class="list2">
 <img src="images/payc-richmenu.jpg" alt="">
 <h4>PayCのLINE＠リッチメニュー部分を作成させていただきました。</h4>
 </div>
 
-<div class="list">
+<div class="list2">
 <img src="images/TechUs.png" alt="">
 <h4>TechUs様のPR記事で使用するサムネイルを作成させていただきました。</h4>
 </div>
